--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -35,6 +35,7 @@
   <link href="{% static 'base/css/download.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/loading.min.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/mainpage.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/landing.css' %}" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"></script>
 
 </head>
@@ -44,7 +45,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">EstroGeneDB</a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">
+        EstroGeneDB
+      </a>
       <button class="navbar-toggler navbar-toggler-right" role="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -59,7 +62,10 @@
             <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">Search</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'tools' %}">Analysis</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'tools_stats' %}">Statistics</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{% url 'metadata' %}">MetaData</a>
@@ -68,8 +74,9 @@
             <a class="nav-link js-scroll-trigger" href="{% url 'manual' %}">Help</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">Team</a>
           </li>
+          
         </ul>
       </div>
     </div>
@@ -78,16 +85,23 @@
   {% block content %}{% endblock %}
 
   <footer>
+    <div>
+
+      Any further questions should be forwarded to
+
+Dr. Zheqi Li (zhl98@pitt.edu) or Ms. Magen Yates (Yates.Megan@medstudent.pitt.edu)
+    </div>
+    <hr style="width:75%;">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; UPMC <br></span>
+          <img src="{% static 'base/img/e2logo.png' %}" width="30%">
+          <img src="{% static 'base/img/lablogo.png' %}" width="30%">
         </div>
         <div class="col-md-4">
-          <br>
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="mailto:tianqinl@andrew.cmu.edu">
+              <a href="mailto:zhl98@pitt.edu">
                 <i class="fas fa-envelope"></i>
               </a>
             </li>
@@ -99,7 +113,7 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <br>
+        
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="{% url 'about' %}#citation">Citation</a>
