finish the stats page

--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -36,6 +36,7 @@
   <link href="{% static 'base/css/loading.min.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/mainpage.css' %}" rel="stylesheet">
   <link href="{% static 'base/css/landing.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/stats.css' %}" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css"></script>
 
 </head>
