--- a/cirDraw/tools/templates/tools/search.html
+++ b/cirDraw/tools/templates/tools/search.html
@@ -157,14 +157,14 @@
         <div id="legend_container_rna"></div>
         <div id="legend_stats_rna"></div>
       </div>
-      <div style="height: 2vh;"></div>
+      <div style="height: 4em;"></div>
     </div>
     
   </div>
 
 
   <div id="dashline3"></div>
-
+  
   <div id="figure3" class="horizon-flex-contain">
     <div id="chart-container3" class="chart-container" style="position: relative; height:80vh; width:45vw">
       <div id="chart3-title-id" style="text-align: center; width: 45vw"></div>
@@ -218,16 +218,6 @@
       
     </div>
     
-  </div>
-  <div id="dashline4"></div>
-  <div id='inlineFrameExample-id'>
-    <iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-    width="1200"
-    height="800"
-    style="display:block;"
-    src="https://epigenomegateway.wustl.edu/">
-    </iframe>
   </div>
   
   
