--- a/cirDraw/static/base/css/stats.css
+++ b/cirDraw/static/base/css/stats.css
@@ -29,3 +29,23 @@ table {
   tr {
     border-collapse:collapse;
   }
+
+
+  svg {
+    font: 10px sans-serif;
+    shape-rendering: crispEdges;
+  }
+
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+  }
+ 
+  path.domain {
+    stroke: none;
+  }
+ 
+  .y .tick line {
+    stroke: #ddd;
+  }
