--- a/cirDraw/templates/base.html
+++ b/cirDraw/templates/base.html
@@ -136,6 +136,7 @@ Dr. Zheqi Li (zhl98@pitt.edu) or Ms. Magen Yates (Yates.Megan@medstudent.pitt.ed
   <!-- Plugin JavaScript -->
   <script src="{% static 'base/js/jquery.easing.min.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
 
   <!-- Custom scripts for this template -->
   <script src="{% static 'base/js/agency.min.js' %}"></script>
