--- a/cirDraw/tools/templates/tools/stats.html
+++ b/cirDraw/tools/templates/tools/stats.html
@@ -6,7 +6,18 @@
 
 <div id="search-container" class="container" style="padding-top: 55px; padding-right: 20em;">
   
-
+  <div class="stacked-chart-container js-stacked-chart-container">
+    <form class="controls">
+        <label><input type="radio" name="mode" value="stacked" checked>Stacked</label>
+        <label><input type="radio" name="mode" value="grouped">Grouped</label>
+    </form>
+    <svg class="stacked-chart js-stacked-chart"></svg>
+    <div class="tooltip js-tooltip">
+        <div class="tooltip-wrapper">
+            <table class="tooltip-table js-tooltip-table"></table>
+        </div>
+    </div>
+  </div>
   <!-- <span class="demo" title="hello" data-tipso="I'm a tooltip">Hover me</span> -->
 <div id="myfilterbox" class="listbox-area">
   <div>
@@ -76,6 +87,7 @@
 </div>
 </div>
 
+
 <div style="border-top: 4em;" class="container">
   <div style="padding-top: 2em;"></div>
   <h3>Up-Regulation</h3>
@@ -108,7 +120,7 @@
     
   </div>
   <div style="padding: 1em;"></div>
-  <svg></svg>
+  
   <div id="post_table_1" style="width: 50em;" class="">
     <div id="num_genes_1" style="padding-bottom: 1em;"></div>
     <div id="chart-micro-1-container" class="hidden">
@@ -179,14 +191,27 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css" integrity="sha256-e47xOkXs1JXFbjjpoRr1/LhVcqSzRmGmPqsrUQeVs+g=" crossorigin="anonymous" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js" integrity="sha256-cs4thShDfjkqFGk5s2Lxj35sgSRr4MRcyccmi0WKqCM=" crossorigin="anonymous"></script>
 -->
+<script type="text/x-underscore" class="js-tooltip-table-content">
+  <table>
+      <% _.each(bars, function (bar) { %>
+          <tr>
+              <td><%= bar.name %></td>
+              <td><%= bar.value %></td>
+          </tr>
+      <% }); %>
+  </table>
+</script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 <script src="https://unpkg.com/@sgratzl/chartjs-chart-boxplot@3"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-box-and-violin-plot@2.4.0/build/Chart.BoxPlot.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha384-FZY+KSLVXVyc1qAlqH9oCx1JEOlQh6iXfw3o2n3Iy32qGjXmUPWT9I0Z9e9wxYe3" crossorigin="anonymous"></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="{% static 'tools/js/stats.js' %}"></script>
 <script src="{% static 'tools/js/select.js' %}"></script>
+<script src="{% static 'tools/js/drawD3jStackPlot.js' %}"></script>
 <script src="{% static 'tools/js/tipso.js' %}"></script>
 <script type="text/javascript"> 
   function decodeHtml(html) {
